<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.upn.waiter.View.ListMenuActivity"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@id/appbar_LM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <include
            android:id="@id/toolbar_LM"
            layout="@layout/view_toolbar"/>

        <android.support.design.widget.TabLayout
            android:id="@id/tabs_LM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed"
            style="@style/MyTabLayoutTheme">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab0_LM"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab1_LM"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab2_LM"/>

        </android.support.design.widget.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#336584"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/list_menu_nombre"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/list_menu_precio"
                android:gravity="center"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/list_menu_cantidad"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@id/viewpager_LM"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="net.voidynullness.android.tabitytabs.TabLayoutActivity"/>



</android.support.design.widget.CoordinatorLayout>
