<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.upn.waiter.View.LoginActivity"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_logo"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_message_welcome"
            android:textAlignment="center"
            android:textColor="@color/textPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#9e9e9e">

            <android.support.v7.widget.AppCompatEditText
                android:id="@id/edt_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:textColorHint="@color/textSecondary"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="8dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#9e9e9e">

            <android.support.v7.widget.AppCompatEditText
                android:id="@id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColorHint="@color/textSecondary"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="16dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/login_enter"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:rippleColor="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</LinearLayout>
