<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="pe.upn.waiter.View.ListOrderActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@id/appbar_LO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <include
            android:id="@id/toolbar_LO"
            layout="@layout/view_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#336584"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_LO"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_cantidad_LO"
                android:gravity="center"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_subtotal_LO"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@id/rcy_orders"
        android:layout_below="@id/toolbar_LO"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@id/fab_addOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_add"
        android:layout_gravity="bottom|end"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:fabSize="auto"
        app:borderWidth="0dp"
        app:rippleColor="@android:color/white" />

</android.support.design.widget.CoordinatorLayout>
